# widget-nexus

./: .gitignore  LICENSE  README.md  STYLE_SPEC_V2.md  WidgetLauncherCpp.cbp  WidgetLauncherCpp.layout  main.cpp  motion_tokens.h
docs/images/: .gitkeep
linx-dst/: CMakeLists.txt  README.md
linx-dst/src/: main.cpp  model.cpp  model.hpp
src-win/: app_ids.hpp  command_runner.cpp  command_runner.hpp  dpi.cpp  dpi.hpp  globals.cpp  globals.hpp  layout.cpp  layout.hpp  model.cpp  model.hpp  nexus_paint.cpp  nexus_paint.hpp  nexus_ui.cpp  nexus_ui.hpp  tray.cpp  tray.hpp
